{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 140,
  "lineage": "b4ea70bd-3fde-ebb5-3590-60e6c87a46e9",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfmynic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkInterfaces/control-nic01",
            "internal_domain_name_suffix": "xl55xtgldxcerjvpabr4h2qimh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/publicIPAddresses/cont-vm-puip01",
                "subnet_id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/virtualNetworks/myVnet00121/subnets/mySnet12100"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "name": "control-nic01",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "1-fd3e4a55-playground-sandbox"
          },
          "dependencies": [
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowsshin",
            "azurerm_network_security_rule.tfallowsshout",
            "azurerm_network_security_rule.tfallowwebin",
            "azurerm_network_security_rule.tfdenyoutwebout",
            "azurerm_public_ip.tfnic1_public_ip",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfmynic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkInterfaces/host-nic02",
            "internal_domain_name_suffix": "xl55xtgldxcerjvpabr4h2qimh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/publicIPAddresses/host-vm-puip02",
                "subnet_id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/virtualNetworks/myVnet00121/subnets/mySnet12100"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "name": "host-nic02",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "1-fd3e4a55-playground-sandbox"
          },
          "dependencies": [
            "azurerm_network_interface.tfmynic1",
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowsshin",
            "azurerm_network_security_rule.tfallowsshout",
            "azurerm_network_security_rule.tfallowwebin",
            "azurerm_network_security_rule.tfdenyoutwebout",
            "azurerm_public_ip.tfnic1_public_ip",
            "azurerm_public_ip.tfnic2_public_ip",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "tf_nic1_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkInterfaces/control-nic01|/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/myNSG001",
            "network_interface_id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkInterfaces/control-nic01",
            "network_security_group_id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/myNSG001"
          },
          "dependencies": [
            "azurerm_network_interface.tfmynic1",
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowsshin",
            "azurerm_network_security_rule.tfallowsshout",
            "azurerm_network_security_rule.tfallowwebin",
            "azurerm_network_security_rule.tfdenyoutwebout",
            "azurerm_public_ip.tfnic1_public_ip",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "tf_nic2_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkInterfaces/host-nic02|/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/myNSG001",
            "network_interface_id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkInterfaces/host-nic02",
            "network_security_group_id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/myNSG001"
          },
          "dependencies": [
            "azurerm_network_interface.tfmynic1",
            "azurerm_network_interface.tfmynic2",
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowsshin",
            "azurerm_network_security_rule.tfallowsshout",
            "azurerm_network_security_rule.tfallowwebin",
            "azurerm_network_security_rule.tfdenyoutwebout",
            "azurerm_public_ip.tfnic1_public_ip",
            "azurerm_public_ip.tfnic2_public_ip",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfnsgname",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/myNSG001",
            "location": "westus",
            "name": "myNSG001",
            "resource_group_name": "1-fd3e4a55-playground-sandbox",
            "security_rule": [],
            "tags": {
              "environment": "Terraform Networking"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tfallowsshin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.0.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/myNSG001/securityRules/AllowSSHIn",
            "name": "AllowSSHIn",
            "network_security_group_name": "myNSG001",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "1-fd3e4a55-playground-sandbox",
            "source_address_prefix": "10.0.0.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "22",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfnsgname",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tfallowsshout",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.0.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/myNSG001/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "myNSG001",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "1-fd3e4a55-playground-sandbox",
            "source_address_prefix": "10.0.0.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "22",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowsshin",
            "azurerm_network_security_rule.tfallowwebin",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tfallowwebin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/myNSG001/securityRules/AllowwebIn",
            "name": "AllowwebIn",
            "network_security_group_name": "myNSG001",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "1-fd3e4a55-playground-sandbox",
            "source_address_prefix": "10.0.0.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "8080",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowsshin",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tfdenyoutwebout",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/myNSG001/securityRules/DenyOutWebOut",
            "name": "DenyOutWebOut",
            "network_security_group_name": "myNSG001",
            "priority": 104,
            "protocol": "Tcp",
            "resource_group_name": "1-fd3e4a55-playground-sandbox",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "8080",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowsshin",
            "azurerm_network_security_rule.tfallowsshout",
            "azurerm_network_security_rule.tfallowwebin",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tfnic1_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/publicIPAddresses/cont-vm-puip01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.88.47.143",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "cont-vm-puip01",
            "resource_group_name": "1-fd3e4a55-playground-sandbox",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowsshin",
            "azurerm_network_security_rule.tfallowsshout",
            "azurerm_network_security_rule.tfallowwebin",
            "azurerm_network_security_rule.tfdenyoutwebout",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tfnic2_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/publicIPAddresses/host-vm-puip02",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.88.45.192",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "host-vm-puip02",
            "resource_group_name": "1-fd3e4a55-playground-sandbox",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_network_interface.tfmynic1",
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowsshin",
            "azurerm_network_security_rule.tfallowsshout",
            "azurerm_network_security_rule.tfallowwebin",
            "azurerm_network_security_rule.tfdenyoutwebout",
            "azurerm_public_ip.tfnic1_public_ip",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfsubnet1name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/virtualNetworks/myVnet00121/subnets/mySnet12100",
            "name": "mySnet12100",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "1-fd3e4a55-playground-sandbox",
            "virtual_network_name": "myVnet00121"
          },
          "dependencies": [
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tfvnetname",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ccfbffba-1dcb-48c4-a6af-0063e3f20867",
            "id": "/subscriptions/80ea84e8-afce-4851-928a-9e2219724c69/resourceGroups/1-fd3e4a55-playground-sandbox/providers/Microsoft.Network/virtualNetworks/myVnet00121",
            "location": "westus",
            "name": "myVnet00121",
            "resource_group_name": "1-fd3e4a55-playground-sandbox",
            "tags": {
              "environment": "Terraform Networking"
            }
          }
        }
      ]
    }
  ]
}